--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,3 +1,8 @@
+$primary: #207EC2;
+$kendo-color-primary: #207EC2;
+$kendo-color-secondary: #207EC2;
+@import '~@progress/kendo-theme-default/dist/all.scss';
+
 .container {
   padding: 0 2rem;
 }
